# IntPerInt

./: .gitignore  README.md  intperint_run_output.txt  intperint_run_output_force.txt  intperint_run_test.sh  intperint_run_test.sh.bak  llama_engine_fix.patch  mem.txt  modelmanager_log_patch.patch
.github/: copilot-instructions.md
IntPerInt/: ContentView.swift  DownloadDelegate.swift  IntPerInt-Bridging-Header.h  IntPerInt.entitlements  IntPerIntApp.swift  LLamaCppWrapper.h  LLamaCppWrapper.mm  ModelCatalog.swift  ModelManager.swift  Models.swift  VideoModelLoader.swift  model_catalog.json
IntPerInt.xcodeproj/: project.pbxproj  project.pbxproj.bak
IntPerInt/Engines/: LLMEngine.swift  LlamaCppEngine.swift  LlamaCppLibEngine.swift  UDSLLMEngine.swift  VideoEngine.swift
IntPerInt/Models/: InstalledModel.swift
IntPerInt/Runtime/: RuntimeManager.swift
IntPerInt/Services/: DownloadDelegate.swift  UDSClient.swift
IntPerInt/Shared/: ChatTheme.swift  ChatUIModels.swift  RuntimeEnv.swift  UIPaletteCommand.swift  UISettings.swift
IntPerInt/Storage/: ConversationStore.swift
IntPerIntTests/: PersistenceAndStreamingTests.swift
intperint-helper/: CMakeLists.txt  README_HELPER.md  config.example.json  config.json  config.json.template
intperint-helper/scripts/: animate_diff_run.py  rag_worker.py  run_sd_diffusers.py  vqa_blip2.py
intperint-helper/src/: udssrv.cpp
intperint-helper/tests/: uds_chat_test.py  uds_test.py
intperint-offline/: .env  .gitignore  LICENSE  README.md  SECURITY.md  client_example.py  pyproject.toml  requirements.txt
(+136 files in other folders)
